detallitos al css y html, el resumen se mantiene

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>Testeando el github</p>
+    <div id = "cabecera">
+        <p>Header de la pagina</p>
+    </div>
+    <div id = "container">
+        <p id = "titulo_cuerpo">Contenido del cuerpo</p>
+        <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina</p>
+    </div>
 </body>
 </html>
