cabecera de face listilla

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id = "cabecera">
-        <p>Header de la pagina</p>
+        Facebook <span id = "header_info"> Login </span>
     </div>
     <div id = "container">
         <p id = "titulo_cuerpo">Contenido del cuerpo</p>
