incluyo contenido en el body

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div id = "container">
         <p id = "titulo_cuerpo">Contenido del cuerpo</p>
-        <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina</p>
+        <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina, que por lo generarl son las opcionas para registrrarse en la web </p>
     </div>
 </body>
 </html>
