completo el merge despues del conflict

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div id = "cabecera">
-        <p>Header de la pagina</p>
+        Facebook <span id = "header_info"> Login </span>
     </div>
     <div id = "container">
         <p id = "titulo_cuerpo">Contenido del cuerpo</p>
-        <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina, que por lo generarl son las opcionas para registrrarse en la web </p>
+        <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina</p>
     </div>
 </body>
 </html>
