--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     </div>
     <div id = "container">
         <p id = "titulo_cuerpo">Contenido del cuerpo</p>
-        <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina</p>
+        <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina, escencialmente consiste
+        mostrar las opciones para registrase o ingresar al sitio 
+        </p>
     </div>
 </body>
 </html>
