--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <div id = "container">
         <p id = "titulo_cuerpo">Contenido del cuerpo</p>
         <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina, escencialmente consiste
-        mostrar las opciones para registrase o ingresar al sitio 
+        mostrar las opciones para registrase o ingresar al sitio
         </p>
+    </div>
+    <div id = "footer">
+
+        Por lo general veo que ponen datos de contacto y licencias y bergas de esas
+
     </div>
 </body>
 </html>
