agrego detalles al header como la imagen y colores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id = "cabecera">
-        Facebook <span id = "header_info"> Login </span>
+        <div class="tiledBackground">
+        </div>        
+        Facebook <span id = "header_info"> Opciones de logeo, contraseña y usuario </span>
     </div>
     <div id = "container">
         <p id = "titulo_cuerpo">Contenido del cuerpo</p>
