--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
     </div>
     <div id = "footer">
-        Por lo general veo que ponen datos de contacto y licencias y bergas de esas.
+        Por lo general veo que ponen datos de contacto y licencias y bergas de esas, arreglabdo typos.
     </div>
 </body>
 </html>
