modificando el body

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina, escencialmente consiste
         mostrar las opciones para registrase o ingresar al sitio.
         </p>
+        <div id = "body_2">
+
+            otra seccion para el cuerpo 
+
+        </div>
     </div>
     <div id = "footer">
         Por lo general veo que ponen datos de contacto y licencias y bergas de esas, arreglabdo typos.
