para subir al server

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <p id = "face">Facebook</p> <span id = "header_info"> Opciones de logeo, contraseña y usuario </span>
     </div>
     <div id = "container">
-        <p id = "titulo_cuerpo">Contenido del cuerpo</p>
+        <p id = "titulo_cuerpo">Finalmente estamos en la red</p>
         <p id = "contenido"> Aqui se alberga el material a mostrar en la pagina, escencialmente consiste
         mostrar las opciones para registrase o ingresar al sitio.
         </p>
