agregue el gitignore y una imagen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </p>
         <div id = "body_2">
 
-            otra seccion para el cuerpo 
+            otra seccion para el cuerpo
+            <p><img src="./assets/arcane.jpg" width="369" height="162.2" alt=""></p>
 
         </div>
     </div>
