hice el readme y algo mas que no recuerdo que era

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <div id = "body_2">
 
             otra seccion para el cuerpo
-            <p><img src="./assets/arcane.jpg" width="369" height="162.2" alt=""></p>
+            <p>
+                <img src="https://i.imgur.com/TqjzgbO.jpeg" width="369" height="162.2" />
+            </p>
 
         </div>
     </div>
