Cambio titulo y footer u.u

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id = "cabecera">
         <div class="tiledBackground">
         </div>        
-         <p id = "face">Facebook</p> <span id = "header_info"> Opciones de logeo, contraseña y usuario </span>
+         <p id = "face">Un humilde blogsito hecho a la rapida</p> <span id = "header_info"> Opciones de logeo, contraseña y usuario </span>
     </div>
     <div id = "container">
         <p id = "titulo_cuerpo">Finalmente estamos en la red</p>
