Cambio la tematica del blog

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             otra seccion para el cuerpo
             <p>
-                <img src="https://i.imgur.com/TqjzgbO.jpeg" width="369" height="162.2" />
+                <img src="https://i.imgur.com/Y5CSCZl.png" width="250" height="192.2" />
             </p>
 
         </div>
